--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,15 +1,17 @@
 /* Estilos para el menú de navegación */
 nav {
-  background-color: #007bff;
-  color: white;
+  background-color: #3f658d;
+  color: #fff;
   padding: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+  font-size: 20px;
 }
 ul {
   list-style: none;
   display: flex;
   justify-content: center;
-  padding: 0;
+  padding: 5px;
 }
 li {
   margin: 0 20px;
@@ -18,10 +20,19 @@ a {
   text-decoration: none;
   color: 007bff;
   font-weight: bold;
+  font-size: 20px;
   transition: color 0.3s;
+  margin: 20px 10px;
+  padding: 50px;
 }
 a:hover {
   color: #0056b3;
+}
+h1 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  margin: 40px;
+  padding: 10px;
 }
 /* Estilos para los formularios */
 form {
@@ -73,7 +84,7 @@ button:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: block;
   transition: transform 0.3s; /* Agregamos una transición suave */
-  margin: 10px 0;
+  margin: 30px 30px;
 }
 .encuesta-item-container:hover {
   transform: translateY(-5px); /* Efecto de elevación al pasar el mouse */
